--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:stretchColumns="0"
+    android:padding="10dp"
     tools:context=".ResultActivity">
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         >
         <TextView
             android:id="@+id/text1"
@@ -23,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -41,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -59,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -77,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -95,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -113,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -131,7 +133,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -149,7 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
@@ -167,7 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            style="?android:attr/ratingBarStyleIndicator"/>
+            style = "?android:attr/ratingBarStyleSmall"/>
     </TableRow>
     <TableRow
         android:layout_width="match_parent"
